Fixed bug: Whitespaces eliminated, centered funcion bar

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 /* purple -  #a74ee8 */
 
 .App {
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--main-bg-color);
   color: var(--main-font-color);
 }
