--- a/src/components/darkMode/DarkMode.css
+++ b/src/components/darkMode/DarkMode.css
@@ -1,5 +1,6 @@
 .toggle-theme {
-  margin: 15px 0;
+  margin: 8px 0;
+  height: 25px;
   width: 55px;
   border-radius: 50px;
   background-color: var(--function-bar-bg);
