--- a/src/components/functionsBar/FunctionsBar.css
+++ b/src/components/functionsBar/FunctionsBar.css
@@ -4,6 +4,8 @@
 }
 
 .functionsBar-inside {
+  display: flex;
+  align-items: center;
   max-width: 600px;
   width: 92%;
   display: flex;
